--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
+    "antd": "^5.10.2",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.17.0",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -25,5 +32,5 @@
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   },
-  "proxy": "http://localhost:4000"
+  "proxy": "http://localhost:3000"
 }
