--- a/server/package.json
+++ b/server/package.json
@@ -41,6 +41,7 @@
     "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
     "morgan": "^1.10.0",
+    "otpauth": "^9.1.5",
     "ts-command-line-args": "^2.5.1"
   },
   "devDependencies": {
